fix css on mobile

--- a/_sass/media780_additions.scss
+++ b/_sass/media780_additions.scss
@@ -2,17 +2,17 @@
 /* this allows us to simple replace the forked scss files on changes in the forked repo */
 
 @media only screen and (max-width: 780px) {
-    .category {
-        .date {
-            display: none;
-        }
-
-        .article {
-            text-align: center;
-        }
+  .category {
+    .date {
+        display: none;
     }
 
-    .bg-scroll {
-        height: 350px;
-    }
+    // .article {
+    //     text-align: center;
+    // }
+  }
+
+  .bg-scroll {
+    height: 350px;
+  }
 }
